            found (Alberto Garcia).
          * WidgetUI: rearrange AY register and Z80 flags in the debugger
            (Gergely Szasz).
          * GTK UI: Fix loading binary data from deleted files (thanks, Crisis)
            (Sergio Baldoví).

        * Miscellaneous improvements:
          * Add ZIP files to the bash completion script (Alberto Garcia).

2021-02-27  Philip Kendall  <philip-fuse@shadowmagic.org.uk>

        * Fuse 1.6.0 released.

        * New features:
          * Add TTX2000S emulation (Guesser).
          * Experimental PulseAudio sound driver (Grzegorz Jablonski and Sergio
            Baldoví).

        * Emulation core improvements:
          * Fix activation of joystick and IF2 peripherals when loading a
            snapshot (thanks, ICEknight) (Sergio Baldoví).

        * UI improvements:
          * New higher resolution keyboard picture on GTK and win32 UIs
            (thanks, Andrew Owen for the picture) (Sergio Baldoví and Philip
            Kendall).
          * GTK UI: Add Fuse icon to the about dialog and the main window
            (Alberto Garcia).
          * GTK UI: Load/save binary dialog remembers last values (Derek
            Fountain).
          * GTK 3 UI: Improve moving and sizing Fuse's window under Wayland
            (Sergio Baldoví).
          * GTK 3 UI: Fix kempston mouse values on Wayland (thanks, Philip
            Kendall) (Sergio Baldoví).
          * GTK 3 UI: Fix bug when resizing from 2x to 3x on GTK UI (Sergio
            Baldoví)
          * SDL UI: Fix crash when using dispmanx backend on the Raspberry Pi
            (Jools Wills).
          * SDL UI: Allow forcing fullscreen mode when SDL doesn't report
            available screen modes (Sergio Baldoví).
          * WidgetUI: New dialog to load/save binary data (Gergely Szasz).
          * WidgetUI: Enable HOME and END keys in menus on widget UIs (Gergely
            Szasz).
          * WidgetUI: Use monospaced characters on memory browser (Gergely